--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -34,13 +35,41 @@
       </nav>
       <div>
         <a  class="accedi">Accedi</a>
-        <a class="inizia" href="">Inizia </a>
+        <a class="btn inizia" href="">Inizia </a>
       </div>
     </div>
 
   </header>
 
-  <main></main>
+  
+
+  <main>
+    
+    <div class="contenitore-grande">
+      <div class="contenitore-medio">
+        <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+        <div class="contenuto">
+          <div class="testo-jumbo">
+            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+            <a class="btn prova">Inizia la tua prova gratuita
+            </a>
+            <div>Annulla in qualsiasi momento</div>
+            <i class="fa-solid fa-arrow-down"></i>
+
+
+          </div>
+          <div class="img-jumbo">
+            <img src="img/jumbo.png" alt="">
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+  </main>
 
   <footer></footer>
 
