[add] primo piano business

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
   
 
-  <main>
-    
+ 
+    <!-- jumbotron -->
+  <div class="jumbotron">
     <div class="contenitore-grande">
       <div class="contenitore-medio">
         <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -65,7 +66,68 @@
 
       </div>
     </div>
+    <!-- jumbotron  -->
+  </div>
+  <main>
 
+    <!-- piani business -->
+    <section class="piani">
+      <div class="contenitore-piccolo">
+        <div class="scelta">
+          <h2>Trova il piano business che fa per te </h2>
+          <input type="radio" checked="checked" name="" id=""> <span>Fatturazione mensile</span> 
+          <input type="radio"  name="" id=""> <span>Fatturazione annuale</span>
+        </div>
+
+        <div class="trova">
+          <div class="opzioni" >
+            <div class="tipologia size"><i class="fa-solid fa-user"></i> Singolo</div>
+            <div class="contenuto-offerte">
+              <h3>Professional</h3>
+              <div class="price">&euro;12.00</div>
+              <div class="tempo">/mese</div>
+              <nav>
+                <ul>
+                  <li><i class="fa-solid fa-user"></i>1 Utente
+                  </li>
+                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione
+                    sicuro</li>
+                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium
+                    e condivisione file semplice e sicura
+                  </li>
+                </ul>
+              </nav>
+              <a class=" btn gratis">Prova gratis per 30 giorni </a>
+              <div class="size acquista ">Oppure <a href="">acquista ora</a></div>
+
+              <div class=" size salienti">Punti salienti del piano </div>
+              <nav class="spunte size">
+                <ul>
+                  <li><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</li>
+                  <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili
+                    Punti Salienti del piano</li>
+                 
+                </ul>
+              </nav>
+            </div>
+
+          </div>
+
+
+
+          <div class="opzioni">
+            <div class="tipologia"><i class="fa-solid fa-user"></i> Singolo</div>
+          </div>
+
+          <div class="opzioni">
+            <div class="tipologia"><i class="fa-solid fa-user"></i> Singolo</div>
+          </div>
+        </div>
+  
+
+
+      </div>
+    </section>
 
 
 
