[finished] piani business

--- a/index.html
+++ b/index.html
@@ -116,11 +116,68 @@
 
 
           <div class="opzioni">
-            <div class="tipologia"><i class="fa-solid fa-user"></i> Singolo</div>
+            <div class="tipologia size"><i class="fa-solid fa-users"></i> Team</div>
+            <div class="contenuto-offerte">
+              <h3>Advanced</h3>
+              <div class="price">&euro;18.00</div>
+              <div class="tempo">/utente/mese</div>
+              <nav>
+                <ul>
+                  <li><i class="fa-solid fa-user"></i>3 o più utenti
+                  </li>
+                  <li><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il
+                    tuo team</li>
+                  <li><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                  </li>
+                </ul>
+              </nav>
+              <a class=" btn gratis">Prova gratis per 30 giorni </a>
+              <div class="size acquista ">Oppure <a href="">acquista ora</a></div>
+
+              <div class=" size salienti">Punti salienti del piano </div>
+              <nav class="spunte size">
+                <ul>
+                  <li><i class="fa-solid fa-check"></i>Nessun limite di spazio per i file</li>
+                  <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                  <li><i class="fa-solid fa-check"></i>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                  <li><i class="fa-solid fa-check"></i>Possibilità di inserire nuovi membri del team</li>
+                  <li><i class="fa-solid fa-check"></i>Gestione dei permessi in base ai ruoli
+                    </li>
+                 
+                </ul>
+              </nav>
+            </div>
           </div>
 
           <div class="opzioni">
-            <div class="tipologia"><i class="fa-solid fa-user"></i> Singolo</div>
+            <div class="tipologia size"><i class="fa-solid fa-building"></i> Azienda</div>
+            <div class="contenuto-offerte">
+              <h3>Enterprise</h3>
+              <div class="price">Contattaci</div>
+              <div class="tempo">-</div>
+              <nav>
+                <ul>
+                  <li><i class="fa-solid fa-user"></i>10 o più utenti
+                  </li>
+                  <li><i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda
+                  </li>
+                  <li><i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                  </li>
+                </ul>
+              </nav>
+              <a class=" btn contattaci">Contattaci </a>
+              <div class="size acquista ">Oppure <a href="">acquista ora</a></div>
+
+              <div class=" size salienti">Punti salienti del piano </div>
+              <nav class="spunte size">
+                <ul>
+                  <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                  <li><i class="fa-solid fa-check"></i>Servizio assistenza 24/h</li>
+                  <li><i class="fa-solid fa-check"></i>Possibilità di personalizzazione totale</li>
+                 
+                </ul>
+              </nav>
+            </div>
           </div>
         </div>
   
@@ -128,6 +185,7 @@
 
       </div>
     </section>
+    <!-- piani business -->
 
 
 
