[add] section enterprise

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <main>
 
     <!-- piani business -->
-    <section class="piani">
+    <section class="sezione piani">
       <div class="contenitore-piccolo">
         <div class="scelta">
           <h2>Trova il piano business che fa per te </h2>
@@ -186,6 +186,27 @@
       </div>
     </section>
     <!-- piani business -->
+
+    <!-- enterprise  -->
+    <section class=" sezione enterprise">
+      <div class="contenitore-piccolo">
+        <div class="tipologia size"><i class="fa-solid fa-building"></i>  Team</div>
+        <div class="contenitore-bottom">
+          <div class="contatta">
+            <h3>Enterprise</h3>
+            <div><a  class=" btn size vendite">Contatta l'ufficio vendite</a></div>
+          </div>
+          <div class="enterprise-bottom">
+            <div class="size w ufficio">Contatta l'ufficio vendite per i prezzi</div>
+            <div class="size">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</div>
+          </div>
+        </div>
+      </div> 
+
+    </section>
+
+    <!-- enterprise -->
+    
 
 
 
