[add] sezione partner

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
               </nav>
               <a class=" btn gratis">Prova gratis per 30 giorni </a>
               <div class="size acquista ">Oppure <a href="">acquista ora</a></div>
+            
+              <hr>
 
               <div class=" size salienti">Punti salienti del piano </div>
               <nav class="spunte size">
@@ -133,6 +135,7 @@
               </nav>
               <a class=" btn gratis">Prova gratis per 30 giorni </a>
               <div class="size acquista ">Oppure <a href="">acquista ora</a></div>
+              <hr>
 
               <div class=" size salienti">Punti salienti del piano </div>
               <nav class="spunte size">
@@ -167,6 +170,7 @@
               </nav>
               <a class=" btn contattaci">Contattaci </a>
               <div class="size acquista ">Oppure <a href="">acquista ora</a></div>
+              <hr>
 
               <div class=" size salienti">Punti salienti del piano </div>
               <nav class="spunte size">
@@ -206,6 +210,29 @@
     </section>
 
     <!-- enterprise -->
+
+    <!-- partner -->
+    <section class="sezione partner">
+      <div class="contenitore-piccolo contenuto-partner ">
+        <div class="immagine-partner"><img src="img/partner.png" alt=""></div>
+        <div class="testo-partner">
+          <h3> Entra in contatto con un partner Dropbox</h3>
+          <div class=" ">Trova un partner Dropbox e HelloSign
+            di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</div>
+          <a  class="btn-partner">Trova un partner</a>
+
+        </div>
+      </div>
+    </section>
+    <!-- partner  -->
+
+    <!-- esegui -->
+    <section class="sezione esegui">
+      <div class="contenitore-piccolo">
+        <h2>Esegui più operazioni con Dropbox Business</h2>
+      </div>
+
+    </section>
     
 
 
