--- a/index.html
+++ b/index.html
@@ -230,9 +230,35 @@
     <section class="sezione esegui">
       <div class="contenitore-piccolo">
         <h2>Esegui più operazioni con Dropbox Business</h2>
-      </div>
+        
+        <div class=" contenuto-esegui">
+        <div>
+          <img src="img/business-feature-switching-tools.png" alt="">
+          <h3>Passa di meno da uno strumento all'altro</h3>
+          <p class="size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
 
+        </div>
+
+        <div><img src="img/business-feature-send-files-it.png" alt="">
+          <h3>Passa di meno da uno strumento all'altro</h3>
+          <p class="size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p></div>
+        <div><img src="img/business-feature-coordinate-it.png" alt="">
+          <h3>Passa di meno da uno strumento all'altro</h3>
+          <p class="size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p></div>
+        <div><img src="img/business-feature-integrations-it.png" alt="">
+          <h3>Passa di meno da uno strumento all'altro</h3>
+          <p class="size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p></div>
+        <div><img src="img/business-feature-multi-device.png" alt="">
+          <h3>Passa di meno da uno strumento all'altro</h3>
+          <p class="size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p></div>
+        <div><img src="img/business-feature-security.png" alt="">
+          <h3>Passa di meno da uno strumento all'altro</h3>
+          <p class="size">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p></div>
+
+      </div>
+      </div>
     </section>
+    <!-- esegui  -->
     
 
 
