[add] sezione 500.000 team

--- a/index.html
+++ b/index.html
@@ -259,6 +259,18 @@
       </div>
     </section>
     <!-- esegui  -->
+     
+    <!-- 500.000 team -->
+    <section class="sezione team">
+      <div class="contenitore-piccolo contenuto-team">
+        <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+        <a  href="">Scopri di più sui nostri clienti</a>
+
+      </div>
+
+    </section>
+    <!-- 500.000 team  -->
+
     
 
 
