[add] sezione domande frequenti

--- a/index.html
+++ b/index.html
@@ -331,7 +331,31 @@
     </section>
     <!-- azienda  -->
 
-    
+    <!-- domande -->
+    <section class="domande">
+      <div class="contenitore-piccolo">
+        <h2>Domande frequenti</h2>
+        <div class="contenuto-domande">
+          <div>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+          <div><i class="fa-solid fa-chevron-down"></i> </div>
+        </div>
+        <div class="contenuto-domande">
+          <div>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+          <div><i class="fa-solid fa-chevron-down"></i> </div>
+        </div>
+        <div class="contenuto-domande">
+          <div>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+          <div><i class="fa-solid fa-chevron-down"></i> </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- domande -->
+
+
+
+
+
 
 
 
