--- a/index.html
+++ b/index.html
@@ -351,21 +351,88 @@
       </div>
     </section>
     <!-- domande -->
-
-
-
-
-
-
-
-
-
-
-
-
   </main>
 
-  <footer></footer>
+  <footer>
+    <section class="footer-top">
+      <div class="contenitore-medio">
+        <div class="lista">
+          <h3>Dropbox</h3>
+          <nav>
+            <ul>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+          </nav>
+        </div>
+
+
+        <div class="lista">
+          <h3>Prodotti</h3>
+          <nav>
+            <ul>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="lista">
+          <h3>Azienda</h3>
+          <nav>
+            <ul>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="lista">
+          <h3>Supporto</h3>
+          <nav>
+            <ul>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="lista">
+          <h3>Community</h3>
+          <nav>
+            <ul>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </section>
+    <section class="footer-bottom">
+      <div class="contenitore-medio">
+        <div class="lingua"><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-down"></i></div>
+
+      </div>
+
+    </section>
+
+
+
+
+
+  </footer>
 
   
 </body>
