[fixed] posizione icone e bottoni attivi

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="contenitore-piccolo">
         <div class="scelta">
           <h2>Trova il piano business che fa per te </h2>
-          <input type="radio" checked="checked" name="" id=""> <span>Fatturazione mensile</span> 
+          <input class="selezionato" type="radio" checked="checked" name="" id=""> <span>Fatturazione mensile</span> 
           <input type="radio"  name="" id=""> <span>Fatturazione annuale</span>
         </div>
 
@@ -88,7 +88,7 @@
               <div class="tempo">/mese</div>
               <nav>
                 <ul>
-                  <li><i class="fa-solid fa-user"></i>1 Utente
+                  <li><i class="fa-solid fa-user"></i><span> 1 Utente</span>
                   </li>
                   <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione
                     sicuro</li>
