[add] hover a faq

--- a/index.html
+++ b/index.html
@@ -338,14 +338,24 @@
         <div class="contenuto-domande">
           <div>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
           <div><i class="fa-solid fa-chevron-down"></i> </div>
+
+         <div class="menu-tendina">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore aspernatur obcaecati possimus excepturi ab, vel consectetur error porro facere tenetur necessitatibus, nam, deleniti voluptatum quam voluptatem dolores! Laborum, velit error. 
+          </div>
         </div>
         <div class="contenuto-domande">
           <div>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
           <div><i class="fa-solid fa-chevron-down"></i> </div>
+          <div class="menu-tendina">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore aspernatur obcaecati possimus excepturi ab, vel consectetur error porro facere tenetur necessitatibus, nam, deleniti voluptatum quam voluptatem dolores! Laborum, velit error. 
+          </div>
         </div>
         <div class="contenuto-domande">
           <div>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
           <div><i class="fa-solid fa-chevron-down"></i> </div>
+          <div class="menu-tendina">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore aspernatur obcaecati possimus excepturi ab, vel consectetur error porro facere tenetur necessitatibus, nam, deleniti voluptatum quam voluptatem dolores! Laborum, velit error. 
+          </div>
         </div>
 
       </div>
